Page web terminé
Baptiste

--- a/baptiste/baptiste.css
+++ b/baptiste/baptiste.css
@@ -1,1 +1,34 @@
- 
+ body {
+    margin: auto;
+}
+
+.bap_Corp {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: sans-serif;
+}
+
+.bap_Entete {
+    display: flex;
+}
+
+.bap_carre {
+	width: 25%;
+	height: 200px;
+}
+
+#bap_rouge {
+	background-color: red;
+}
+
+#bap_orange {
+	background-color: orange;
+}
+
+#bap_bleu {
+	background-color: blue;
+}
+
+#bap_vert {
+	background-color: green;
+}
